--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emailjs/browser": "^3.11.0",
     "@react-three/drei": "^9.70.0",
     "@react-three/fiber": "^8.13.0",
+    "framer-motion": "^10.12.16",
     "maath": "^0.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
